# quiz-app

./: Dockerfile  README.md  pyproject.toml
public/: index.html  quiz.js  style.css
quiz_app/: README.md  main.py
tests/: test_quiz_app.py
