[tool.poetry]
name = "quiz-app"
version = "0.1.0"
description = ""
authors = ["Przemysław Sulecki <psugrg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.17.5"
fastapi = "^0.74.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
